k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sabores-conectados
  labels:
    name: sabores-conectados
    environment: production
